crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_007_AxROM_Cobra_Triangle.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
assertion_line: 673
expression: text
---
rom=mapper-007-AxROM/Cobra Triangle.nes
rom_sha256=a1a4405a432a8c3dc7361df7a60ac45d561f9588e7b37ed04fc60bc87bb70101
frames=1141
fb_bytes=245760
cycles=33949786
audio_samples=836505
audio_fnv1a64=db8de4f9ee158338
checkpoint f900 fb_fnv1a64=eefb356130a3a23c
checkpoint f1100 fb_fnv1a64=4d0d095f63f8265f
